# StyleAssistant

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  GroveAssistantSpec.md  POST_MERGE_SETUP.md  README.md  StyleAssistantSpec.md  TEMPLATE_USAGE.md  TODOS.md  pyproject.toml  secrets_template.json  setup.sh
.github/workflows/: setup-template.yml
AgentUsage/: README.md  backend_architecture.md  backend_technical_research.md  house_agents.md  project_setup.md  subagent_usage.md
AgentUsage/pre_commit_hooks/: TROUBLESHOOTING.md  commit-msg  examples.md  pre-push  setup_guide.md
ClaudeUsage/: README.md  backend_architecture.md  backend_technical_research.md  git_guide.md  project_setup.md
ClaudeUsage/pre_commit_hooks/: TROUBLESHOOTING.md  commit-msg  examples.md  install_hooks.sh  pre-commit-javascript  pre-commit-multi-language  pre-commit-secrets-scanner  prepare-commit-msg  setup_guide.md
backend/: README.md  config.py  database.py  main.py  schema.sql
backend/ai_providers/: base.py  claude.py  prompts.py
backend/analysis/: __init__.py  models.py  router.py  service.py
backend/core/: dependencies.py  exceptions.py  middleware.py
backend/costs/: __init__.py  models.py  router.py  service.py
backend/debug/: __init__.py  models.py  router.py  service.py
backend/extractors/: __init__.py  base.py  factory.py  uniqlo.py
backend/products/: __init__.py  models.py  service.py
backend/profiles/: __init__.py  models.py  router.py  (+1 more)
extension/: .eslintrc.json  README.md  manifest.json  package-lock.json  package.json  tsconfig.json
tests/: README.md  conftest.py
(+18 files in other folders)
